using $resource with put for update profile

--- a/app/index.html
+++ b/app/index.html
@@ -112,9 +112,10 @@
     <!-- Recipe - Search -->
     <script src="recipe-search/search-recipe.controller.js"></script>
     <script src="recipe-search/search-recipe.service.js"></script>
+    <!-- Resources -->
+    <script src="resources/user.service.js"></script>
     <!-- Signup -->
     <script src="signup/signup.controller.js"></script>
-    <script src="signup/signup.service.js"></script>
     <!-- Widgets -->
     <script src="widgets/picture-upload.directive.js"></script>
     <script src="widgets/picture-upload.service.js"></script>
