--- a/app/profile-view/view-profile.html
+++ b/app/profile-view/view-profile.html
@@ -13,5 +13,7 @@
       <h3>Recent activity</h3>
       <user-activities user-picture="profView.profile.picture" activities="profView.profile.activities"></user-activities>
     </div>
+
+    <input type="button" value="clickkk" ng-click="profView.click()" />
   </div>
 </div>
