use resources instead of http

--- a/app/index.html
+++ b/app/index.html
@@ -108,12 +108,12 @@
     <script src="recipe-create/create-recipe.services.js"></script>
     <!-- Recipe - Display-->
     <script src="recipe-display/display-recipe.controller.js"></script>
-    <script src="recipe-display/display-recipe.service.js"></script>
     <!-- Recipe - Search -->
     <script src="recipe-search/search-recipe.controller.js"></script>
-    <script src="recipe-search/search-recipe.service.js"></script>
     <!-- Resources -->
-    <script src="resources/user.service.js"></script>
+    <script src="resources/recipes.comments.resource.js"></script>
+    <script src="resources/recipes.resource.js"></script>
+    <script src="resources/users.resource.js"></script>
     <!-- Signup -->
     <script src="signup/signup.controller.js"></script>
     <!-- Widgets -->
