--- a/app/recipe-display/display-recipe.html
+++ b/app/recipe-display/display-recipe.html
@@ -128,7 +128,7 @@
               </i><i ng-repeat="t in [] | range: (5-comment.mark)" class="fa fa-star-o">
               </i> -
             </span>
-            <span class="info-top">Added on {{comment.date | date}}</span>
+            <span class="info-top">Added on {{comment.createdOn | date}}</span>
             <p>{{comment.message}}</p>
           </div>
         </div>
