profile view + edit

--- a/app/index.html
+++ b/app/index.html
@@ -101,8 +101,9 @@
     <!-- Modal gallery -->
     <script src="modal-gallery/modal-gallery.directive.js"></script>
     <script src="modal-gallery/modal-gallery.service.js"></script>
-    <!-- Profile - View -->
+    <!-- Profile -->
     <script src="profile-view/view-profile.controller.js"></script>
+    <script src="profile-edit/edit-profile.controller.js"></script>
     <!-- Recipe - Create -->
     <script src="recipe-create/create-recipe.controller.js"></script>
     <script src="recipe-create/create-recipe.services.js"></script>
