--- a/app/profile-edit/edit-profile.html
+++ b/app/profile-edit/edit-profile.html
@@ -1,7 +1,7 @@
 <div class="edit-profile">
   <aside>
     <div class="profile-picture">
-      <img ng-src="{{profEdit.profile.picture | formatImg:200:200 }}" />
+      <img ng-src="{{profEdit.profile.picture.public_id | formatImg:200:200 }}" />
     </div>
     <div class="input-fw">
       <button class="btn bg-valid pointer-on" ui-sref="profEdit.edit()">Save</button>
@@ -14,7 +14,7 @@
     Full name:
     <input type="text" ng-model="profEdit.profile.fullname" class="input" />
     Date of birth:
-    <input type="date" ng-model="profEdit.profile.dob | date" class="input" />
+    <input type="date" ng-model="profEdit.dobFormatted" class="input" />
     Location:
     <input type="text" ng-model="profEdit.profile.location" class="input" />
     Description
