game creation with images + signup/login redesign + image gallery fixed

--- a/app/index.html
+++ b/app/index.html
@@ -13,15 +13,18 @@
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="connexion/connexion.css" />
+    <link rel="stylesheet" href="game-create/create-quiz.css" />
     <link rel="stylesheet" href="recipe-create/create-recipe.css" />
     <link rel="stylesheet" href="recipe-display/display-recipe.css" />
     <link rel="stylesheet" href="layout/header.css" />
     <link rel="stylesheet" href="layout/main.css" />
     <link rel="stylesheet" href="layout/menu-left.css" />
+    <link rel="stylesheet" href="login/login.css" />
     <link rel="stylesheet" href="profile-view/view-profile.css" />
     <link rel="stylesheet" href="styles/modal-window.css" />
     <link rel="stylesheet" href="styles/picture-upload.css" />
-    <link rel="stylesheet" href="styles/search-recipe.css" />
+    <link rel="stylesheet" href="recipe-search/search-recipe.css" />
+    <link rel="stylesheet" href="signup/signup.css" />
     <link rel="stylesheet" href="styles/footer.css" />
     <link rel="stylesheet" href="styles/step-line.css" />
     <link rel="stylesheet" href="widgets/user-activities.css" />
@@ -95,6 +98,9 @@
     <script src="connexion/authentication.service.js"></script>
     <script src="connexion/connexion.directive.js"></script>
     <script src="connexion/connexion.service.js"></script>
+    <!-- Game -->
+    <script src="game-create/create-quiz.controller.js"></script>
+    <script src="game-display/display-quiz.controller.js"></script>
     <!-- Layout -->
     <script src="layout/header.directive.js"></script>
     <script src="layout/menu-left.directive.js"></script>
@@ -115,6 +121,7 @@
     <!-- Recipe - Search -->
     <script src="recipe-search/search-recipe.controller.js"></script>
     <!-- Resources -->
+    <script src="resources/games.resource.js"></script>
     <script src="resources/recipes.comments.resource.js"></script>
     <script src="resources/recipes.resource.js"></script>
     <script src="resources/users.resource.js"></script>
