--- a/app/profile-view/view-profile.html
+++ b/app/profile-view/view-profile.html
@@ -1,6 +1,6 @@
 <div class="edit-profile">
   <aside>
-    <div class="profile-picture">
+    <div class="profile-picture pointer-on" ng-click="profView.showProfilePicture()">
       <img ng-src="{{profView.profile.picture.public_id | formatImg:200:200 }}" />
     </div>
     <div class="input-fw">
