--- a/app/recipe-search/search-recipe.html
+++ b/app/recipe-search/search-recipe.html
@@ -5,11 +5,11 @@
   </div>
 
   <div masonry>
-    <div class="masonry-brick" ng-repeat="recipe in rcpSearch.recipes" ng-click="rcpSearch.displayRecipe(recipe._id)">
+    <div class="masonry-brick masonry-nb-3 t-fast" ng-repeat="recipe in rcpSearch.recipes" ng-click="rcpSearch.displayRecipe(recipe._id)">
+      <img ng-src="{{ recipe.picture.public_id | formatImg }}" alt="recipe.name" />
       <div class="recipe-title">
         <h2>{{recipe.name}}</h2>
       </div>
-      <img ng-src="{{ recipe.picture.public_id | formatImg }}" alt="recipe.name" />
     </div>
-  </masonry>
+  </div>
  </div>
