connexion directive user info + search game creation

--- a/app/index.html
+++ b/app/index.html
@@ -102,6 +102,7 @@
     <!-- Game -->
     <script src="game-create/create-quiz.controller.js"></script>
     <script src="game-display/display-quiz.controller.js"></script>
+    <script src="game-search/search-game.controller.js"></script>
     <!-- Layout -->
     <script src="layout/header.directive.js"></script>
     <script src="layout/menu-left.directive.js"></script>
