--- a/app/connexion/connexion.html
+++ b/app/connexion/connexion.html
@@ -1,13 +1,27 @@
-<li ng-if="!connexion.connected" class="menu-item">
+<li ng-if="!connexion.userConnected" class="menu-item">
   <a class="menu-item-btn" ng-click="connexion.login()">
     <span>Login</span>
   </a>
 </li>
-<li ng-if="!connexion.connected" class="menu-item">
+<li ng-if="!connexion.userConnected" class="menu-item">
   <a class="menu-item-btn" ng-click="connexion.register()">
     <span>Signup</span>
   </a>
 </li>
-<li ng-if="connexion.connected" class="menu-item">
-  <a>Connected</a>
+<li ng-if="connexion.userConnected" class="menu-item user-connected" ng-click="connexion.toggleUser()">
+  <img ng-src="{{connexion.userConnected.picture.public_id | formatImg:50:50}}" class="pointer-on" />
+  <i class="fa fa-caret-down fa-2x t-normal pointer-on" ng-class="{'r-180': connexion.userInfo}"></i>
+  <div class="user-info" ng-show="connexion.userInfo">
+    <h3>{{connexion.userConnected.username}}</h3>
+    <ul>
+      <li ng-click="connexion.profile()">
+        <i class="fa fa-user fa-2x pointer-on"></i>
+        Profile
+      </li>
+      <li ng-click="connexion.logout()">
+        <i class="fa fa-sign-out fa-2x pointer-on"></i>
+        Logout
+      </li>
+    </ul>
+  </div>
 </li>
