--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="connexion/connexion.css" />
     <link rel="stylesheet" href="game-create/create-quiz.css" />
     <link rel="stylesheet" href="game-display/display-quiz.css" />
+    <link rel="stylesheet" href="game-search/search-game.css" />
     <link rel="stylesheet" href="layout/header.css" />
     <link rel="stylesheet" href="layout/main.css" />
     <link rel="stylesheet" href="layout/menu-left.css" />
