display with final step + mistake count

--- a/app/game-display/display-quiz.html
+++ b/app/game-display/display-quiz.html
@@ -1,11 +1,22 @@
 <div class="container display-quiz">
-  <h1>{{quizDisplay.quiz.title}}</h1>
-  <div class="score">
+  <div class="quiz" ng-hide="quizDisplay.endOfQuiz">
+    <!-- Progress -->
     <progress ng-value="quizDisplay.getProgress()"></progress>
-    <i class="fa fa-star t-slow"></i> {{quizDisplay.score}}
-  </div>
-  <div class="" ng-hide="quizDisplay.endOfQuiz">
-    <p>{{quizDisplay.currentQuestion.title}}</p>
+    <!-- Quiz title + like -->
+    <h1>{{quizDisplay.quiz.title}}
+      <span class="fa-stack fa-lg pointer-on">
+        <i class="fa fa-circle fa-stack-2x"></i>
+        <i class="fa fa-heart fa-stack-1x"></i>
+      </span>
+    </h1>
+
+    <!-- Info -->
+    <div class="info">
+      Author: {{quizDisplay.quiz.author.username}} - Your score: <i class="fa fa-star t-slow"></i> {{quizDisplay.score}}
+    </div>
+
+    <!-- Title -->
+    <h3  class="question-title">Question: {{quizDisplay.currentQuestion.title}}</h3>
 
     <div class="list">
       <!-- Text answers -->
@@ -35,7 +46,27 @@
       Submit
     </button>
   </div>
-  <div ng-show="quizDisplay.endOfQuiz">
-    {{quizDisplay.score}}
+
+  <!-- Quiz finished info -->
+  <div class="quiz-finished" ng-show="quizDisplay.endOfQuiz">
+    <h1><i class="fa fa-star t-slow"></i> Quiz finished <i class="fa fa-star t-slow"></i></h1>
+
+    <div class="stats">
+      <h3 class="list-title">Stats</h3>
+      <ul class="list">
+        <li>Final score: {{quizDisplay.score}}</li>
+        <li>{{quizDisplay.quiz.questions.length}} questions answered</li>
+        <li>{{quizDisplay.nbMistake}} mistakes</li>
+      </ul>
+    </div>
+
+    <h3>Your new score is now: {{quizDisplay.score}}</h3>
+
+    <button class="btn btn-submit pointer-on" ng-click="quizDisplay.retry()">
+      <i class="fa fa-repeat"></i> Retry
+    </button>
+    <button class="btn btn-submit pointer-on" ng-click="quizDisplay.goToSearch()">
+      <i class="fa fa-bars"></i> Search Quiz
+    </button>
   </div>
 </div>
