--- a/app/game-search/search-game.html
+++ b/app/game-search/search-game.html
@@ -11,7 +11,7 @@
     </div>
     <div class="info">
       <h3>{{game.title}}</h3>
-      <p>{{game.author}}</p>
+      <p>{{game.author.username}}</p>
     </div>
   </div>
 </div>
