--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="recipe-search/search-recipe.css" />
     <link rel="stylesheet" href="signup/signup.css" />
     <link rel="stylesheet" href="styles/footer.css" />
-    <link rel="stylesheet" href="styles/step-line.css" />
+    <link rel="stylesheet" href="widgets/step-line.css" />
     <link rel="stylesheet" href="widgets/user-activities.css" />
     <!-- endbuild -->
   </head>
