--- a/app/recipe-display/display-recipe.html
+++ b/app/recipe-display/display-recipe.html
@@ -3,6 +3,7 @@
   <step-line graph="rcpDisplay.lineGraph" steps="rcpDisplay.stepsInfo"
     ng-hide="rcpDisplay.showInfoPage" current="rcpDisplay.currentStep.number"
     step-clicked="rcpDisplay.goTo"></step-line>
+
   <!-- Informations -->
   <div ng-show="rcpDisplay.showInfoPage">
     <h1>{{rcpDisplay.recipe.name}}</h1>
@@ -25,6 +26,8 @@
         {{rcpDisplay.recipe.author.username}}
       </a>.
     </div>
+
+    <!-- Utensils -->
     <div ng-show="rcpDisplay.recipe.utensils.length">
       <h3 class="list-title">Utensils</h3>
       <ul class="list">
@@ -33,6 +36,8 @@
         </li>
       </ul>
     </div>
+
+    <!-- Ingredients -->
     <div>
       <h3 class="list-title">Ingredients</h3>
       <ul class="list">
@@ -84,7 +89,19 @@
   <!-- End of steps -->
   <div class="after-steps" ng-show="rcpDisplay.stepsFinished">
     <h2>Congratulations !</h2>
-    <p>Share a picture of your result with the community :)</p>
+    <!-- Like -->
+    <p ng-hide="rcpDisplay.liked">
+      Enjoyed that recipe?
+      <span class="pointer-on" ng-click="rcpDisplay.like()">
+        Like it
+        <i class="fa fa-heart"></i>
+      </span>
+    </p>
+    <p ng-show="rcpDisplay.liked">
+      Thanks !
+    </p>
+    <!-- Picture -->
+    <p>Or share a picture of your result with the community :)</p>
     <picture-upload target-url="rcpDisplay.picturesUploadUrl"
       target-tags="rcpDisplay.picturesUploadTags" callback="rcpDisplay.afterPictureUpload"
       ng-hide="rcpDisplay.done"></picture-upload>
