display quiz add final score

--- a/app/game-display/display-quiz.html
+++ b/app/game-display/display-quiz.html
@@ -56,7 +56,7 @@
       </ul>
     </div>
 
-    <h3>Your new score is now: {{quizDisplay.score}}</h3>
+    <h3>Your new score is now: {{quizDisplay.totalScore}}</h3>
 
     <!-- Like -->
     <p ng-hide="quizDisplay.liked">
